fixed filter size on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -93,6 +93,7 @@ button {
   background-color: #FFFFFF;
   display: block;
   padding: .5rem;
+  width: 100%;
 }
 
 .filterContainer button {
